// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/forms/ArrayInput renders a hidden checkbox 1`] = `
<div
  className="cte-edit-array"
>
  <div
    className="cte-array-items"
  >
    <ArrayItem
      index={0}
      item="false"
      key="0"
      model={
        Array [
          Object {
            "id": "license-key",
            "type": "checkbox",
          },
        ]
      }
      onEdit={[Function]}
      remove={[Function]}
    />
  </div>
  <div
    className="text-danger"
  />
  <div
    className="text-info"
  />
  <div
    className="form-inline"
  >
    <span />
    <ParamController
      checked={Array []}
      model={
        Array [
          Object {
            "id": "license-key",
            "type": "checkbox",
          },
        ]
      }
      onArray={[Function]}
      onCheck={[Function]}
      onInput={[Function]}
      selected={null}
    />
    <br />
    <button
      className="cte-save-btn btn-admin-blue add-btn"
      onClick={[Function]}
    >
      add
    </button>
  </div>
</div>
`;

exports[`common/forms/ArrayInput renders successfully 1`] = `
<div
  className="cte-edit-array"
>
  <div
    className="text-danger"
  />
  <div
    className="text-info"
  />
  <div
    className="form-inline"
  >
    <span />
    <ParamController
      checked={Array []}
      model={Array []}
      onArray={[Function]}
      onCheck={[Function]}
      onInput={[Function]}
      selected={null}
    />
    <br />
    <button
      className="cte-save-btn btn-admin-blue add-btn"
      onClick={[Function]}
    >
      add
    </button>
  </div>
</div>
`;
